--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -3,6 +3,15 @@
   <div class="card p-2 m-2">
     <h1> <%= @restaurant.name %> , ( <%= @restaurant.category %> ) </h1>
     <h3> Address : <%= @restaurant.address %> </h3>
+    <br>
+    <div class="card">
+      <h1>Our reviews :</h1>
+      <% @reviews.each do |review| %>
+      <p> <%= review.content %> </p>
+      <p> <%= review.rating %> </p>
+      <% end %>
+    </div>
   </div>
-  <p><%= link_to 'Back to Home', restaurants_path %></p>
+  <p><%= link_to 'Back to Home', restaurants_path, class: "btn btn-secondary" %></p>
+  <p><%= link_to 'Add a review', new_restaurant_review_path(@restaurant), class: "btn btn-secondary" %></p>
 </div>
