--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -6,7 +6,7 @@
     <br>
     <div class="card">
       <h1>Our reviews :</h1>
-      <% @reviews.each do |review| %>
+      <% @restaurant.reviews.each do |review| %>
       <p> <%= review.content %> </p>
       <p> <%= review.rating %> </p>
       <% end %>
